--- a/RL/Dice20 game.ipynb
+++ b/RL/Dice20 game.ipynb
@@ -69,11 +69,11 @@
     "        else:\n",
     "            action = 1-np.argmax(self.Q[self.dice-1, self.t])\n",
     "            \n",
-    "        # stay with the dice and take reward\n",
+    "        # kkep the dice as it is and take reward\n",
     "        if action == 0:\n",
     "            r = self.dice\n",
     "            self.Q[self.dice-1, self.t, action] = r + self.gamma * self.Q[self.dice-1, self.t+1, np.argmax(self.Q[self.dice-1, self.t+1])]\n",
-    "        # else dice has been thrown\n",
+    "        # else throw the dice\n",
     "        else:\n",
     "            r = 0\n",
     "            self.dice = np.random.randint(1,21)\n",
