standard strategy and input strategy added (to be refined)

--- a/RL/Force4.ipynb
+++ b/RL/Force4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "from colorama import Fore, Style\n",
-    "from functools import partial"
+    "from functools import partial\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +30,13 @@
     "        self.color = color_map[color]\n",
     "        self.value = value\n",
     "        self.points = 0\n",
+    "        self.turns = []\n",
     "        self.strategy = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,21 +64,28 @@
     "            self.game.values[np.where(self.game.values[:,position] == 0)[0].max(), position] = value\n",
     "        except:\n",
     "            print('Move is not allowed!')\n",
+    "\n",
+    "    def remove_coin(self, value, position):\n",
+    "        '''Remove a coin from the passed position.'''\n",
+    "        try:\n",
+    "            self.game.values[np.where(self.game.values[:,position] != 0)[0].min(), position] = 0.0\n",
+    "        except:\n",
+    "            print('Cannot remove a coin!')\n",
     "            \n",
     "    def has_won(self, value):\n",
     "        '''Return a boolean referring to whether the player with a given value has won the game with the current grid.'''\n",
     "        if value < 0:\n",
-    "            vertical = sum([game.game.shift(n, axis=0) for n in range(4)]).fillna(0.0).values.min()\n",
-    "            horizontal = sum([game.game.shift(n, axis=1) for n in range(4)]).fillna(0.0).values.min()\n",
-    "            diag1 = sum([game.game.shift(n, axis=0).shift(n, axis=1) for n in range(4)]).fillna(0.0).values.min()\n",
-    "            diag2 = sum([game.game.shift(n, axis=0).shift(-n, axis=1) for n in range(4)]).fillna(0.0).values.min()\n",
+    "            vertical = sum([self.game.shift(n, axis=0) for n in range(4)]).fillna(0.0).values.min()\n",
+    "            horizontal = sum([self.game.shift(n, axis=1) for n in range(4)]).fillna(0.0).values.min()\n",
+    "            diag1 = sum([self.game.shift(n, axis=0).shift(n, axis=1) for n in range(4)]).fillna(0.0).values.min()\n",
+    "            diag2 = sum([self.game.shift(n, axis=0).shift(-n, axis=1) for n in range(4)]).fillna(0.0).values.min()\n",
     "            return min([vertical, horizontal, diag1, diag2]) <= -4.0\n",
     "        \n",
     "        if value > 0:\n",
-    "            vertical = sum([game.game.shift(n, axis=0) for n in range(4)]).fillna(0.0).values.max()\n",
-    "            horizontal = sum([game.game.shift(n, axis=1) for n in range(4)]).fillna(0.0).values.max()\n",
-    "            diag1 = sum([game.game.shift(n, axis=0).shift(n, axis=1) for n in range(4)]).fillna(0.0).values.max()\n",
-    "            diag2 = sum([game.game.shift(n, axis=0).shift(-n, axis=1) for n in range(4)]).fillna(0.0).values.max()\n",
+    "            vertical = sum([self.game.shift(n, axis=0) for n in range(4)]).fillna(0.0).values.max()\n",
+    "            horizontal = sum([self.game.shift(n, axis=1) for n in range(4)]).fillna(0.0).values.max()\n",
+    "            diag1 = sum([self.game.shift(n, axis=0).shift(n, axis=1) for n in range(4)]).fillna(0.0).values.max()\n",
+    "            diag2 = sum([self.game.shift(n, axis=0).shift(-n, axis=1) for n in range(4)]).fillna(0.0).values.max()\n",
     "            return max([vertical, horizontal, diag1, diag2]) >= 4.0\n",
     "        \n",
     "    def play_turn(self, \n",
@@ -101,12 +110,13 @@
     "            if verbose:\n",
     "                print(\"*\"*50)\n",
     "                if self.current_turn is self.player1:\n",
-    "                    print(self.current_turn.color+\"Player 1 won!!!\".center(50)+Fore.RESET)\n",
+    "                    print(self.current_turn.color+\"Player 1 win!!!\".center(50)+Fore.RESET)\n",
     "                elif self.current_turn is self.player2:\n",
-    "                    print(self.current_turn.color+\"Player 2 won!!!\".center(50)+Fore.RESET)\n",
+    "                    print(self.current_turn.color+\"Player 2 win!!!\".center(50)+Fore.RESET)\n",
     "                print(\"*\"*50)\n",
     "            if points:\n",
     "                self.current_turn.points += 1\n",
+    "                self.current_turn.turns.append(self.turn)\n",
     "                self.games += 1\n",
     "            return False\n",
     "        # if no moves are available is a draw\n",
@@ -125,7 +135,21 @@
     "            self.current_turn = self.player1\n",
     "        # else continue playing returning True\n",
     "        return True\n",
+    "    \n",
+    "    def reset_game(self):\n",
+    "        '''Reset the grid to start a new game'''\n",
+    "        self.game = pd.DataFrame(np.zeros((7,7)))\n",
+    "        self.current_turn = self.player1\n",
+    "        self.turn = 0\n",
     "\n",
+    "\n",
+    "    def play_game(self,\n",
+    "                  verbose=True,\n",
+    "                  points=True):\n",
+    "        '''Play a full game until one of the player wins or no more moves are available.'''\n",
+    "        while(self.play_turn(verbose, points)):\n",
+    "            pass\n",
+    "        self.reset_game()\n",
     "            \n",
     "    def __str__(self):\n",
     "        '''Fancy print of the current grid.'''\n",
@@ -137,79 +161,122 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Strategies\n",
+    "\n",
+    "- **random_strategy**: the player put a coin randomly in an available slot.\n",
+    "- **current_best_move_strategy**: the player put a coin to get the highest immediate reward. \n",
+    "- **input_strategy**: the player takes the move from input."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define few strategies\n",
+    "# define the random strategy\n",
     "def random_strategy(game:Force4):\n",
     "    return np.random.choice(np.array([n for n in range(7)])[game.available_moves()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the player consider all available moves and returns the one corresponding to the highest reward\n",
+    "def current_best_move_strategy(game:Force4, exponent=4):\n",
+    "    # define a list that will contain a score for each move\n",
+    "    moves = []\n",
+    "\n",
+    "    # consider all available moves\n",
+    "    for pos, true_or_false in enumerate(game.available_moves()):\n",
+    "        if true_or_false == True:\n",
+    "            # put a coin that will be removed\n",
+    "            game.put_coin(value=game.current_turn.value,\n",
+    "                        position=pos)\n",
+    "\n",
+    "            # consider all horizontal, vertical, and diagonal combination of coins\n",
+    "            vertical = game.current_turn.value * (sum([game.game.shift(n, axis=0) for n in range(4)]).fillna(0.0).values**exponent).sum()\n",
+    "            horizontal = game.current_turn.value * (sum([game.game.shift(n, axis=1) for n in range(4)]).fillna(0.0).values**exponent).sum()\n",
+    "            diag1 = game.current_turn.value * (sum([game.game.shift(n, axis=0).shift(n, axis=1) for n in range(4)]).fillna(0.0).values**exponent).sum()\n",
+    "            diag2 = game.current_turn.value * (sum([game.game.shift(n, axis=0).shift(-n, axis=1) for n in range(4)]).fillna(0.0).values**exponent).sum()\n",
+    "            moves.append( ( pos, sum([vertical, horizontal, diag1, diag2]) ) )\n",
+    "\n",
+    "            # remove the coin\n",
+    "            game.remove_coin(value=game.current_turn.value,\n",
+    "                            position=pos)\n",
+    "    \n",
+    "    return max(moves, key=lambda x:x[1])[0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input strategy\n",
+    "def input_strategy(game:Force4):\n",
+    "    # print the grid\n",
+    "    print('*'*30)\n",
+    "    print(game)\n",
+    "    print('^'.center(3)*7)\n",
+    "    print('|'.center(3)*7)\n",
+    "    print(''.join([str(n).center(3) for n in range(0, 7)]))\n",
+    "    move = input(game)\n",
+    "    clear_output(wait=False)\n",
+    "    return int(move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "game = Force4(player1=Player(color='red', value=1.0),\n",
     "              player2=Player(color='blue', value=-1.0))\n",
     "\n",
-    "game.player1.strategy = partial(random_strategy, game=game)\n",
-    "game.player2.strategy = partial(random_strategy, game=game)"
+    "game.player1.strategy = partial(current_best_move_strategy, game=game)\n",
+    "game.player2.strategy = partial(input_strategy, game=game)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**************************************************\n",
-      "\u001b[31m                 Player 1 won!!!                  \u001b[39m\n",
-      "**************************************************\n"
-     ]
-    }
-   ],
-   "source": [
-    "while(game.play_turn()):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " .  .  .  .  . \u001b[31m o \u001b[39m . \n",
-      " .  .  .  . \u001b[34m o \u001b[39m\u001b[31m o \u001b[39m\u001b[31m o \u001b[39m\n",
-      " .  .  .  . \u001b[34m o \u001b[39m\u001b[31m o \u001b[39m\u001b[31m o \u001b[39m\n",
-      " . \u001b[34m o \u001b[39m\u001b[34m o \u001b[39m . \u001b[31m o \u001b[39m\u001b[34m o \u001b[39m\u001b[34m o \u001b[39m\n",
-      "\u001b[34m o \u001b[39m\u001b[31m o \u001b[39m\u001b[34m o \u001b[39m . \u001b[31m o \u001b[39m\u001b[34m o \u001b[39m\u001b[34m o \u001b[39m\n",
-      "\u001b[31m o \u001b[39m\u001b[31m o \u001b[39m\u001b[34m o \u001b[39m . \u001b[34m o \u001b[39m\u001b[31m o \u001b[39m\u001b[34m o \u001b[39m\n",
-      "\u001b[34m o \u001b[39m\u001b[31m o \u001b[39m\u001b[31m o \u001b[39m\u001b[31m o \u001b[39m\u001b[31m o \u001b[39m\u001b[34m o \u001b[39m\u001b[31m o \u001b[39m\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(game)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for _ in range(1):\n",
+    "    game.play_game(verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.player1.points"
+   ]
   }
  ],
  "metadata": {
